testing/Travis/testcases/prototype/shouldSucceed/Issue174.adl
CONTEXT Issue174 IN ENGLISH

RELATION bfRLIType[BusinessFunction*RLIType] [UNI]
RELATION impactTypeOf[Impact*RLIType]
RELATION likelihoodTypeOf[Likelihood*RLIType]
RELATION riskTypeOf[Risk*RLIType]

RULE RLIType : -- invariant
bfRLIType |- bfRLIType;(impactTypeOf~;impactTypeOf /\ likelihoodTypeOf~;likelihoodTypeOf /\ riskTypeOf~;riskTypeOf)
MEANING "A BusinessFunction may only use a predefined RLIType"
VIOLATION (SRC I, TXT " attempts to use the non predefined RLIType '", TGT I, TXT "'")

ENDCONTEXT